src/objects/Campaign_Spend__c.object
<CustomObject>
    <description>Forecast, Actual, and Committed records for all Campaigns.</description>
    <fields>
        <fullName>Amount_USD__c</fullName>
        <label>Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The amount of the Actual line item, Committed line item, or Forecast line item.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Year__c</fullName>
        <formula>ParentCampaign__r.Year__c</formula>
        <label>Campaign Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_Type__c</fullName>
        <description>PREQ = Purchase Requisition. PORD = Purchase Order.</description>
        <inlineHelpText>PREQ = Purchase Requisition. PORD = Purchase Order.</inlineHelpText>
        <label>Committed Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Date__c</fullName>
        <label>Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <description>Represents a PR Number, or PO Number, etc. from SAP.</description>
        <label>Document Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Text__c</fullName>
        <label>Document Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dupe_Key_Text__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Text value to check for uniqueness in Forecast values.</inlineHelpText>
        <label>Dupe Key Text</label>
        <length>140</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Month_Date__c</fullName>
        <formula>DATE(VALUE( ParentCampaign__r.Year__c ),
CASE(Forecast_Month__c, 
&apos;Jan&apos;,1,
&apos;Feb&apos;,2,
&apos;Mar&apos;,3,
&apos;Apr&apos;,4,
&apos;May&apos;,5,
&apos;Jun&apos;,6,
&apos;Jul&apos;,7,
&apos;Aug&apos;,8,
&apos;Sep&apos;,9,
&apos;Oct&apos;,10,
&apos;Nov&apos;,11,
&apos;Dec&apos;,12,1)
,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_Month__c</fullName>
        <description>Represents the Month that the forecast amount is applicable for.</description>
        <label>Forecast Month</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLAccount__c</fullName>
        <description>Cost Element from SAP.</description>
        <label>GL Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLDescription__c</fullName>
        <description>Cost Element description field from SAP.</description>
        <label>GL Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOCode__c</fullName>
        <label>IO Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Number__c</fullName>
        <description>The SAP Line Item number.</description>
        <label>Line Item Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Text__c</fullName>
        <label>Line Item Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentCampaign__c</fullName>
        <label>Master Campaign</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipLabel>Campaign Spend</relationshipLabel>
        <relationshipName>Campaign_Spend</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <description>The Posting Date for SAP Actual.</description>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReportingDate__c</fullName>
        <description>A common date field that is used to compare Actuals to Committed to Forecast in reports. Actuals mirror Posting Date, Committed mirrors Debit Date, and Forecast mirrors Forecast Month  Date.</description>
        <formula>IF(RecordType.Name = &quot;Forecast&quot; &amp;&amp; NOT(ISNULL(Forecast_Month_Date__c)), Forecast_Month_Date__c,
  IF(RecordType.Name = &quot;Actual&quot; &amp;&amp; NOT(ISNULL(Posting_Date__c)), Posting_Date__c,
    IF(RecordType.Name = &quot;Committed&quot; &amp;&amp; NOT(ISNULL(Debit_Date__c)), Debit_Date__c,      
      null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>Name1 field from SAP.</description>
        <label>Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Campaign Spend</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ParentCampaign__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Amount__c</columns>
        <columns>Forecast_Month__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Spend_Actual_Committed</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Campaign_Year__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IOCode__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign_Spend__c.Actual,Campaign_Spend__c.Committed</value>
        </filters>
        <label>Campaign Spend - Actual/Committed</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Spend_Actual_Committed_Outdated</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Campaign_Year__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IOCode__c</columns>
        <columns>ParentCampaign__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign_Spend__c.Actual,Campaign_Spend__c.Committed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Campaign Spend-Actual/Committed-Outdated</label>
        <sharedTo>
            <role>Application_Admin</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000000000}</displayFormat>
        <label>Campaign Spend ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Spend</pluralLabel>
    <recordTypes>
        <fullName>Actual</fullName>
        <active>true</active>
        <description>Actual Spend from SAP.</description>
        <label>Actual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Committed</fullName>
        <active>true</active>
        <description>Committed Spend from SAP.</description>
        <label>Committed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Forecast</fullName>
        <active>true</active>
        <description>Monthly Forecast allocations.</description>
        <label>Forecast</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ForecastCurrencyEqualsCampaign</fullName>
        <active>false</active>
        <description>Forecast Currency must equal Campaign Currency.</description>
        <errorConditionFormula>IF( RecordType.DeveloperName = &quot;Forecast&quot;,  text(CurrencyIsoCode)  &lt;&gt;   text(ParentCampaign__r.CurrencyIsoCode), null)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Forecast Currency does not equal Campaign Currency.</errorMessage>
    </validationRules>
</CustomObject>